<resources>
    <string name="AUTO">Auto</string>
    <string name="Abb_AUTO">Auto</string>
    <string name="Abb_Title_Custom">Custom settings</string>
    <string name="Abb_Title_Effects">Effects</string>
    <string name="Abb_Title_ExposureValue">Exposure value</string>
    <string name="Abb_Title_FaceDetection">Face detection</string>
    <string name="Abb_Title_Flash">Flash</string>
    <string name="Abb_Title_GPS">Location tags</string>
    <string name="Abb_Title_Guideline">Grid lines</string>
    <string name="Abb_Title_HDR">"HDR
(Rich tone)"</string>
    <string name="Abb_Title_ISO">ISO</string>
    <string name="Abb_Title_Manual_Focus">Manual focus</string>
    <string name="Abb_Title_Metering">Metering modes</string>
    <string name="Abb_Title_More_Settings">More settings</string>
    <string name="Abb_Title_RecordingMode">Recording mode</string>
    <string name="Abb_Title_SaveAsFlipped">Save pictures as previewed</string>
    <string name="Abb_Title_ShutterSound">Shutter sound</string>
    <string name="Abb_Title_Storage">Storage location</string>
    <string name="Abb_Title_Timer">Timer</string>
    <string name="Abb_Title_VideoStabilisation">"Video
stabilisation"</string>
    <string name="Abb_Title_VoiceCapture">Voice control</string>
    <string name="Abb_Title_WhiteBalance">White balance</string>
    <string name="AnimatedGif_Helptext">Tap and hold the Camera button to take pictures continuously.</string>
    <string name="BUTTON_OFF">Off</string>
    <string name="BUTTON_ON">On</string>
    <string name="COLOR_TONE_EDIT">Edit colour tone</string>
    <string name="COLOR_TONE_NONE">Standard</string>
    <string name="COLOR_TUNE_BREEZE">Breezy</string>
    <string name="COLOR_TUNE_NOSTALGIA">Nostalgic</string>
    <string name="COLOR_TUNE_PRESET">Tone %d</string>
    <string name="COLOR_TUNE_SERENE">Serene</string>
    <string name="COLOR_TUNE_SOFT">Soft</string>
    <string name="COLOR_TUNE_VIVID">Vivid</string>
    <string name="CUSTOM">Custom</string>
    <string name="CUSTOM_ITEM_TITLE">Custom %d</string>
    <string name="CUSTOM_REPLACE_SAVE">Replace custom settings</string>
    <string name="EFFECT_STRENGTH">Strength</string>
    <string name="EFFECT_VIGNETTE">Vignette</string>
    <string name="ER_EFFECT_NOEFFECT">No effect</string>
    <string name="EXT_DOWNLOAD">Download</string>
    <string name="E_BW">Grey-scale</string>
    <string name="E_CIRCLELENS">Fisheye</string>
    <string name="E_COMIC">Cartoon</string>
    <string name="E_CUBISM">Cubism</string>
    <string name="E_FADED_COLOURS">Faded colour</string>
    <string name="E_FISHEYE">Fisheye</string>
    <string name="E_FLIP_PHOTO">Flip</string>
    <string name="E_GOTHIC_NOIR">Moody</string>
    <string name="E_HEART">Heart shape</string>
    <string name="E_IMPRESSIONIST">Engraving</string>
    <string name="E_INSTAGRAM_NASHVILLE">Turquoise</string>
    <string name="E_MANAGER">Manager</string>
    <string name="E_NEGATIVE">Negative</string>
    <string name="E_NOIR_NOTE">Noir note</string>
    <string name="E_NOSTALGIA">Nostalgia</string>
    <string name="E_OLDPHOTO">OldPhoto</string>
    <string name="E_OVAL_BLUR">Oval blur</string>
    <string name="E_PASTEL_SKETCH">Oil pastel</string>
    <string name="E_POINT_BLUE">Blue</string>
    <string name="E_POINT_RED_YELLOW">Red/Yellow</string>
    <string name="E_POLAROID">Instant pic</string>
    <string name="E_POSTCARD">Stamp</string>
    <string name="E_POSTERIZE">Posterise</string>
    <string name="E_RAINBOW">Tint</string>
    <string name="E_RETRO">Retro</string>
    <string name="E_SANDSTONE">Rugged</string>
    <string name="E_SEPIA">Sepia</string>
    <string name="E_SHINY">Shiny</string>
    <string name="E_SIGNATURE">Signature</string>
    <string name="E_SOLARIZE">Solarise</string>
    <string name="E_SPLIT_VIEW">Split</string>
    <string name="E_SUNSHINE">Sunshine</string>
    <string name="E_VIGNETTE_OUTFOCUS">Vignette</string>
    <string name="E_VINTAGE">Vintage</string>
    <string name="E_WINDOW">Window</string>
    <string name="F_AUTOFOCUS">Auto focus</string>
    <string name="F_AUTO_FLASH">Auto</string>
    <string name="F_FACE">Face detection</string>
    <string name="F_MANUALFOCUS">Manual focus</string>
    <string name="INFINITY_INDICATOR">Far distance</string>
    <string name="MACRO_INDICATOR">Close-up</string>
    <string name="MF_OFF">Auto</string>
    <string name="MF_ON">Manual</string>
    <string name="MODE">Mode</string>
    <string name="M_CENTER_WEIGHTED">Centre-weighted</string>
    <string name="M_MATRIX">Matrix</string>
    <string name="M_SPOT">Spot</string>
    <string name="MultiFrame_Helptext">Hold the device steady while taking pictures.</string>
    <string name="OPTION_OFF">Off</string>
    <string name="OPTION_ON">On</string>
    <string name="RESOLUTION_SUB_TTS">Resolution %1$d by %2$d</string>
    <string name="RMS_TTS">%d times faster</string>
    <string name="RM_NORMAL">Normal</string>
    <string name="Resolution_Ratio_16_9_TTS">Ratio 16 by 9, %1$s megapixels, resolution %2$d by %3$d</string>
    <string name="Resolution_Ratio_1_1_TTS">Ratio one by one, %1$s megapixels, resolution %2$d by %3$d</string>
    <string name="Resolution_Ratio_4_3_TTS">Ratio 4 by 3, %1$s megapixels, resolution %2$d by %3$d</string>
    <string name="SEEK_CONTROL">Seek control</string>
    <string name="SM_ADDME">Add me</string>
    <string name="SM_ANIMATEDGIF">Animated GIF</string>
    <string name="SM_ANIMATEDGIF_description">Create animated images by taking pictures continuously.</string>
    <string name="SM_ANTI_FOG">Anti-fog</string>
    <string name="SM_ANTI_FOG_DISABLE">Unable to take pictures in Anti-fog mode. Not enough light.</string>
    <string name="SM_ANTI_FOG_description">Automatically corrects pictures for fog when taking them in the mist.</string>
    <string name="SM_AQUA">Aqua</string>
    <string name="SM_AQUA_description">Appropriate for taking pictures underwater.</string>
    <string name="SM_AUTO">Auto</string>
    <string name="SM_AUTO_SELFIE">Selfie</string>
    <string name="SM_AUTO_SELFIE_PALM_description">Take selfies easily by making simple gesture commands without the need to reach for the camera button.</string>
    <string name="SM_AUTO_SELFIE_description">Take selfie shots and apply various effects, such as an airbrushed effect.</string>
    <string name="SM_AUTO_description">Take the best possible pictures by setting the device to adjust the exposure and colour of pictures automatically.</string>
    <string name="SM_BEAUTY">Beauty face</string>
    <string name="SM_BEAUTY_description">Take portrait pictures with an airbrushed effect.</string>
    <string name="SM_CLIP_MOVIE">Video Collage</string>
    <string name="SM_CLIP_MOVIE_description">"Create your own video clips without any editing tools. You can easily share created videos via your social network accounts. The following recording types are available.

Collage: Create a video collage by selecting a grid layout and recording several videos of the same length in either 4:3 or 1:1 aspect ratio.
Slow motion: Record a video that will be divided into a selected number of sections with one playing at normal speed and the others in slow motion. This feature is only available while using the rear camera."</string>
    <string name="SM_CONTINUOUS">Continuous shot</string>
    <string name="SM_CONTINUOUS_description">Take pictures continuously by tapping and holding the camera button.</string>
    <string name="SM_DUALSHOT">Dual Camera</string>
    <string name="SM_DUALSHOT_description">Take pictures and record videos in a variety of styles using the front and rear cameras at the same time.</string>
    <string name="SM_ENVIRONMENT">Tag shot</string>
    <string name="SM_ENVIRONMENT_description">Provide environment information of picture.</string>
    <string name="SM_FAST_MOTION">Fast motion</string>
    <string name="SM_FAST_MOTION_description">Record videos for viewing in fast motion. You can play a specific section of each video in fast motion after recording them.</string>
    <string name="SM_FOOD">Food</string>
    <string name="SM_FOOD_description">Take pictures that emphasise the vivid colours of food.</string>
    <string name="SM_FRAME">Frame shot</string>
    <string name="SM_HYPER_MOTION">Hyperlapse</string>
    <string name="SM_HYPER_MOTION_description">Create your own time lapse video by recording at various frame rates. The frame rate will be automatically adjusted depending on the scene being recorded and the movement of the device.</string>
    <string name="SM_INTERACTIVE">Virtual shot</string>
    <string name="SM_INTERACTIVE_description">Create multi-directional pictures of objects.</string>
    <string name="SM_LVB">Live Broadcast</string>
    <string name="SM_MAGIC">Shot &amp; more</string>
    <string name="SM_MAGIC_description">"Use various functions with your burst shots after you take them. The following functions are available in %s:
Best photo: Select the best from a series of pictures.
Best face: Select the best picture of each person from a series of pictures.
Drama: Take a series of pictures of a moving object, then merge them.
Eraser: Erase unwanted moving objects from your picture.
Panning shot: Capture a sense of motion when taking pictures of moving objects."</string>
    <string name="SM_NIGHT">Night</string>
    <string name="SM_NIGHT_description">Take brighter, clearer pictures in low light without the flash</string>
    <string name="SM_PANORAMA">Panorama</string>
    <string name="SM_PANORAMA_description">Create a panorama by taking consecutive pictures in either a horizontal or vertical direction.</string>
    <string name="SM_PRO">Pro</string>
    <string name="SM_PRO_LITE_description">Adjust the ISO sensitivity, exposure value, and white balance manually while taking pictures.</string>
    <string name="SM_PRO_description">Adjust the exposure value, shutter speed, ISO sensitivity, white balance, focal length, and colour tone manually while taking pictures.</string>
    <string name="SM_RICH_TONE">HDR (Rich tone)</string>
    <string name="Title_FocusMode">Focus mode</string>
    <string name="Title_Front_CamcorderResolution">Video size (front)</string>
    <string name="Title_GPS">Location tags</string>
    <string name="Title_GestureControl">Gesture control</string>
    <string name="Title_Guideline">Grid lines</string>
    <string name="Title_HRM_shutter">Use heart rate sensor</string>
    <string name="Title_MotionPhoto">Motion photo</string>
    <string name="Title_Picture_Format">Save as RAW file</string>
    <string name="Title_QRCode">Detect QR codes</string>
    <string name="Title_QuickShot">Quick launch</string>
    <string name="Title_Rear_CamcorderResolution">Video size (rear)</string>
    <string name="Title_Review">Review pictures</string>
    <string name="Title_SaveAsFlipped">Save pictures as previewed</string>
    <string name="Title_Shooting_Method_Front">Shooting methods (front)</string>
    <string name="Title_Shooting_Method_Rear">Shooting methods (rear)</string>
    <string name="Title_ShutterSound">Shutter sound</string>
    <string name="Title_Storage">Storage location</string>
    <string name="Title_Tap_To_Take_Pictures">Tap to take pictures</string>
    <string name="Title_TrackingAF">Tracking AF</string>
    <string name="Title_VideoStabilisation">Video stabilisation</string>
    <string name="Title_Viewmode">View mode</string>
    <string name="Title_Voice_Capture">Voice control</string>
    <string name="Title_Volume_Key_As">Volume keys function</string>
    <string name="Title_rear_lens_distortion_correction">Shape correction</string>
    <string name="hrm_shutter_summary">Once your face has been recognised, tap the heart rate sensor to take a selfie.</string>
    <string name="reset_title">Reset settings</string>
    <string name="tap_to_take_pictures_summary">Tap the screen to take selfies easily.</string>
</resources>